--- a/Neo/FrmPrm.resx
+++ b/Neo/FrmPrm.resx
@@ -650,20 +650,20 @@
   <data name="btnSalir.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALqSURBVDhPdZILSJNRGIZ/ihKJiZqlbo5/bopWpnYxQwtD
-        XOB0VgiVWVaaqYEaObJASEkWLlO8hYqXSKMRqWGDzIJuJtnUybR5v80xZVq6/VPXxd7+6SBq+MALH5z3
-        PHwcDrEeUQ3aoYhHimV+eQcVIHlPBeTKKD9RExVQ1kEJakepEw0jxkjppNZStyaiXjfNIv3BIXkIO5OG
-        BHENsh6/Qv67UVT06tE6+xuxdWqTpW7N0YcajR3DBacq2tBkAKongAcaoHLYhLI+CnVjixDUjlCWujW7
-        pYtaR0c2wvNeomhwBTntOuR8/JvCngVa0P+vAMS+TT8JYtQ8e0sXVU72bgjJbkau0oSMN1qI3k6vJuPN
-        NLLlcxBUdFhvsHAkGL+C/ZTOheq2LS5cBN2UIvPzIpJfqJHSMrWaKy0aZH7QIUxCC0Yi+Sv69EToUxOw
-        cPUy9OfDAUkCZEliEBsZ8L7+BKltBpx7NoG45gnEy9S42KxGROMkAsSfKGIuM9a0nMjHUpIASylRoM6G
-        wnCIBG7F4aU3CU5yPYStCzjZOIbTTeMIfzyMA5VfsKd2GPtvf6AFsbEmo+82GIO4MAa6w3CQh/kgL+CQ
-        OxCyC/yTechQ/sDhSiV8y1XYUdyLXSV92F01BD+RjCL6An1XZnayMePDw6wvF/P+HsBeDr57suBHv+vm
-        9CfQ6zRwEb2GR4kKXsVKeBUp4VkxAB+z4H8Gnbbjm73dzM6Yeg3B9IRddAE4xQMg8xXgFfaAa06BApz7
-        /SCv/ScAQWxoZzB05tnxRlc3y8EJW6Il4NZoaUE3yHuKtdAzu1QFMvX5+h/JOe3dNNNhK2yPieFeqQFb
-        0gX2XcVaJN1glQ7APbnBaKlbY3fh2ZKrvSNsBdngVE3BLU8ON1qymrxOuNEbsC89pZdeB2aMVMhkMIQ2
-        wsKvZNU4WPQlFn3ZHKZYLmeVqqpc46XHLfX1sRFWD7JLByaZd+RZrLudoc53FBzLEQ1B/AEPYstGW0TW
-        LAAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALrSURBVDhPdZILSFNhGIYPRYXIhpql7jjONhVNTe1ihhaG
+        aODWuiDYxbLSSg3MSMmCIKNYOE3xFjpMowyH5AUTSgvMMsmmTqYtdVq6xpRp6TzT1sXeznQQNfbACx/8
+        7//w8fMT9thfrx8RPVJ+iynvpkOlr+jQWy10cFYjHVrWTQurx+hD9aOmffIJvbVui6jGMElSIeBRXog+
+        dgHJkipcq32O/I4xVAwY0Tb9GwkPtWZr3Za9D3Q6Nssdhys60TgP3BsH7usAmcaMskEaDz8uQFg9Slvr
+        tmyWL+hdXLiIzW1F0fASbnQZcOPN3xT2zzGCD/8KQGxb85Mgxiyzn3xB7erkicicZtxSmZHZrkfWy8nl
+        ZLZPIkcxA2FFt+0Gc3si8CsiWOVWqO10dBcg/Koc2e8WkPpUi7Rnn5dz/pkO2a8NiJYyAo0oesmYcRbG
+        9GTMXTwH48lYQJqMlhQJiNUs+F2uQ3rnPE40jSOxeRxJLVqcbtZC1DCBUMlbmpjJTjB/OxuDxRQhFtP2
+        gz4ehfldFHA9Ea1+FHipNRC3zSG+4SOONH5CbK0GO2TvsaVag+03XzOChASzKWgDTOECmML4mN/phdlw
+        X2AXH4gMQEx8LjJVP7BbpkJQuRqbigcQUDKIzZUjCM5qoYmBsKClKX8upgK9MB0kwGyIN7CVh+8+JIKZ
+        d12bUQejQQf3rBfwLlHDt1gF3yIVfCqGEGgR/M+w60Z8dWJP+R+t0REcH7DjCsArHgKVr4RXYT8ElhQo
+        wbv7AdSl/wQgiFVdLJbBMrtc6e0jnV3hGCeFoErPCPpA3VGuhJm5pWpQ6U/sfyS3Cx2THOf1cDggAV+m
+        A1faC26eciXSPpClQ+Cn1pusdVvYp5oWPZxc4CDMAa/yMzxzFfBkJMvJ7YEnswH3zGNmaTtwjsrFHBZL
+        vE5c+IWq/ASSuUQyly3hSBQKslRd6ZEkP2it22ed+N4wt3RognNbcY3M64lyu63kWY8YCOIPBgTLQrLE
+        Td8AAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
